Update connection string

--- a/MyCompany/appsettings.json
+++ b/MyCompany/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Project": {
-    "ConnectionString": "Data Source=(TD19)\\SQLSERVER; Database=MyCompany; Persist Security Info=false; User ID='sa'; Pasword='sa'; MultipleActiveResultSets=True; TrustedConnection=false;",
+    "ConnectionString": "Data Source=.; Database=MyCompany;  MultipleActiveResultSets=True; TrustedConnection=True;",
     "CompanyName": "My Company",
     "CompanyPhone": "+/ (111) 11-11-11",
     "CompanyPhoneShort": "+71111111",
