--- a/MyCompany/appsettings.json
+++ b/MyCompany/appsettings.json
@@ -1,10 +1,10 @@
 {
   "Project": {
-    "ConnectionString": "Data Source=.; Database=MyCompany;  MultipleActiveResultSets=True; TrustedConnection=True;",
-    "CompanyName": "My Company",
+    "ConnectionString": "Data Source=.; Database=MyCompany; MultipleActiveResultSets=True; Trusted_Connection=True;",
+    "CompanyName": "Shareholders",
     "CompanyPhone": "+/ (111) 11-11-11",
     "CompanyPhoneShort": "+71111111",
-    "CompanyEmail":  "contact@mycompany.com"
+    "CompanyEmail": "contact@mycompany.com"
 
 
   }
